fix(halo-theme): improve spacing when tree item show multi lines

--- a/packages/halo-theme/src/custom-elements/ef-tree-item.less
+++ b/packages/halo-theme/src/custom-elements/ef-tree-item.less
@@ -24,4 +24,8 @@
   [part=indent] {
     font-size: 20px;
   }
+
+  [part=label] {
+    line-height: 1.2;
+  }
 }
